# grpc-stream-kafka

./: README.md  docker-compose.yml
data-client/: .gitignore  Makefile  pyproject.toml
data-client/data_client/: client.py
data-client/examples/: stream_in.py  stream_msgs.py
protos/: ingester.proto
python_server/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
python_server/app/: server.py
python_server/protos/: ingester.proto
server/src/: server.cpp  server.h
